--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+data/.DS_Store
+.gitignore
+data/processed/.DS_Store
+data/processed/question_1/.DS_Store
+data/raw/.DS_Store
+data/raw/airbnb/.DS_Store
+reports/.DS_Store
+reports/figures/.DS_Store
+notebooks/.DS_Store
+.DS_Store
